test/loop/confidence/errors/verify_error_4.loop
# Scope resolution error for function call

main ->
  scan([100,2,3])
  where
    scan(ls) =>
      []                        : []
      [x]       | x < 10   : [x]
                | x > 10        : [10]
      [x:xs]                    : scan(xs) + x
      where
        sub ->
          mail()
          where
            scrub ->
              sub()
              where
                dub ->
                  scan([sub1()])
